--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,6 @@
 {
-  "endOfLine": "auto",
-  "arrowParens": "always",
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": true,
   "singleQuote": true,
-  "trailingComma": "es5"
+  "jsxSingleQuote": true,
+  "trailingComma": "es5",
+  "arrowParens": "always"
 }
