--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "baseUrl": "src",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["src/*"]
     },
 
     /* Compile / Module / Build */
