[SNO-268] tsconfig 경로 매핑 수정 (#1371)
* #1370 [FIX] tsconfig 경로 매핑 수정
* #1370 [FIX] tsconfig 내 baseUrl 값 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["src/*"]
     },
 
     /* Compile / Module / Build */
