--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,9 @@
 .env
 .env.local
 .env.development.local
+.env.production
 .env.production.local
+.env.test
 .env.test.local
 .env.development
 .env.production
