[FEAT] #1411 tiptap 라이브러리 설치

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@tiptap/pm": "^3.19.0",
+    "@tiptap/react": "^3.19.0",
+    "@tiptap/starter-kit": "^3.19.0",
     "axios": "^1.7.2",
     "canvas-confetti": "^1.9.3",
     "date-fns": "^3.6.0",
