[FEAT] : 상단 툴바 제작

--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.7.5",
     "@growthbook/growthbook-react": "^1.6.0",
     "@svgr/webpack": "latest",
     "@tanstack/react-query": "^5.51.23",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@tiptap/extensions": "^3.19.0",
+    "@tiptap/extension-bubble-menu": "^3.19.0",
+    "@tiptap/extension-color": "^3.19.0",
+    "@tiptap/extension-floating-menu": "^3.19.0",
+    "@tiptap/extension-placeholder": "^3.19.0",
+    "@tiptap/extension-text-align": "^3.19.0",
+    "@tiptap/extension-text-style": "^3.19.0",
     "@tiptap/pm": "^3.19.0",
     "@tiptap/react": "^3.19.0",
     "@tiptap/starter-kit": "^3.19.0",
@@ -32,6 +38,7 @@
     "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
     "react-icon": "^1.0.0",
