--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tiptap/extension-bubble-menu": "^3.19.0",
     "@tiptap/extension-color": "^3.19.0",
     "@tiptap/extension-floating-menu": "^3.19.0",
+    "@tiptap/extension-image": "^3.19.0",
     "@tiptap/extension-placeholder": "^3.19.0",
     "@tiptap/extension-text-align": "^3.19.0",
     "@tiptap/extension-text-style": "^3.19.0",
